<resources>
    <string name="app_name">Food and Fit Tracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="exercise">Exercise</string>
    <string name="weighin">Weigh In</string>

    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="test_banner_ad">ca-app-pub-3940256099942544/6300978111</string>
    <string name="search">search</string>
    <string name="hint_workout">hint workout</string>
    <string name="action_submit">submit</string>
    <string name="title_enter_post">Workout</string>
    <string name="hint_duration">durattion</string>

</resources>
