<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fragments.FoodFragment">

    <TextView
        android:id="@+id/breakfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breakfast"
        android:textSize="20sp"
        android:paddingTop="16dp"

        />
    <TextView
        android:id="@+id/lunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lunch"
        android:textSize="20sp"
        android:paddingTop="16dp"

        />
    <TextView
        android:id="@+id/dinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dinner"
        android:textSize="20sp"
        android:paddingTop="16dp"


        />

    <TextView
        android:id="@+id/snacks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snacks"
        android:textSize="20sp"
        android:paddingTop="16dp"


        />


</LinearLayout>
