<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/white"
        />


    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="116dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/breakfast"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingTop="8dp"
                android:textSize="20sp"
                android:layout_marginTop="60dp"
                android:text="@string/breakfast"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/breakfast"
                android:background="@color/colorPrimaryDark"
                android:visibility="visible" />

            <TextView
                android:id="@+id/lunch"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingTop="8dp"
                android:textSize="20sp"
                android:layout_below="@id/breakfast"
                android:text="@string/lunch"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/lunch"
                android:background="@color/colorPrimaryDark"
                android:visibility="visible" />


            <TextView
                android:id="@+id/dinner"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingTop="8dp"
                android:textSize="20sp"
                android:layout_below="@id/lunch"
                android:text="@string/dinner"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/dinner"
                android:background="@color/colorPrimaryDark"
                android:visibility="visible" />

            <TextView
                android:id="@+id/snacks"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingTop="8dp"
                android:textSize="20sp"
                android:layout_below="@id/dinner"
                android:text="@string/snacks"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@id/snacks"
                android:background="@color/colorPrimaryDark"
                android:visibility="visible" />

            <TextView
                android:id="@+id/exercise"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingTop="8dp"
                android:textSize="20sp"
                android:layout_below="@id/snacks"
                android:text="@string/exercise"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@id/exercise"
                android:background="@color/colorPrimaryDark"
                android:visibility="visible" />

            <TextView
                android:id="@+id/weighin"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingTop="8dp"
                android:textSize="20sp"
                android:layout_below="@id/exercise"
                android:text="@string/weighin"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@id/weighin"
                android:background="@color/colorPrimaryDark"
                android:visibility="visible" />





        </RelativeLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/test_banner_ad" />

</RelativeLayout>